5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3998/executions/1756_2390.log
== TEST (2019-05-27 20:15:06) 
-- CODE:
from numpy import*
p= array(eval(input()))
f= array(eval(input()))
i = 0
while(i<12):
	if(max(p))==p[i]:
print(i+1)
-- ERROR:
File "XXXX", line 7
    print(i+1)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 20:15:29) 
-- CODE:
from numpy import*
p= array(eval(input()))
f= array(eval(input()))
i = 0
while(i<12):
	if(max(p))==p[i]:
	print(i+1)
-- ERROR:
File "XXXX", line 7
    print(i+1)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 20:15:40) 
-- CODE:
from numpy import*
p= array(eval(input()))
f= array(eval(input()))
i = 0
while(i<12):
	if(max(p))==p[i]:
		print(i+1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 20:18:31) 
-- CODE:
from numpy import*
p= array(eval(input()))
f= array(eval(input()))
i = 0
while(i<12):
	if(max(p))==p[i]:
		print(i+1)
break
i=i+1
-- ERROR:
File "XXXX", line 8
    break
    ^
SyntaxError: 'break' outside loop
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 20:18:46) 
-- CODE:
from numpy import*
p= array(eval(input()))
f= array(eval(input()))
i = 0
while(i<12):
	if(max(p))==p[i]:
		print(i+1)
	break
	i=i+1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 20:20:44) 
-- CODE:
from numpy import*
p= array(eval(input()))
f= array(eval(input()))
i = 0
while(i<12):
	if(max(p))==p[i]:
		print(i+1)
	break
		i=i+1
-- EXECUTION TIME:
0.833451
-- ERROR:
  File "/home/codebench/codes/1756/2390/main.py", line 9
    i=i+1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 20:21:17) 
-- CODE:
from numpy import*
p= array(eval(input()))
f= array(eval(input()))
i = 0
while(i<12):
	if(max(p))==p[i]:
		print(i+1)
break
	i=i+1
-- EXECUTION TIME:
1.08989
-- ERROR:
  File "/home/codebench/codes/1756/2390/main.py", line 9
    i=i+1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 20:21:23) 
-- CODE:
from numpy import*
p= array(eval(input()))
f= array(eval(input()))
i = 0
while(i<12):
	if(max(p))==p[i]:
		print(i+1)
break
	i=i+1
-- ERROR:
File "XXXX", line 9
    i=i+1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 20:22:41) 
-- CODE:
from numpy import*
p= array(eval(input()))
f= array(eval(input()))
i = 0
while(i<12):
	if(max(p))==p[i]:
		print(i+1)
break
	i=i+1
-- ERROR:
File "XXXX", line 9
    i=i+1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 20:23:09) 
-- CODE:
from numpy import*
p= array(eval(input()))
f= array(eval(input()))
i = 0
while(i<12):
	if(max(p))==p[i]:
		print(i+1)
break
	i=i+1
-- EXECUTION TIME:
1.09988
-- ERROR:
  File "/home/codebench/codes/1756/2390/main.py", line 9
    i=i+1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 20:23:28) 
-- CODE:
from numpy import*
p= array(eval(input()))
f= array(eval(input()))
i = 0
while(i<12):
	if(max(p))==p[i]:
		print(i+1)
	break
		i=i+1
-- ERROR:
File "XXXX", line 9
    i=i+1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 20:55:32) 
-- CODE:
from numpy import*
p= array(eval(input()))
f= array(eval(input()))
i = 0
while(i<12):
	if(max(p))==p[i]:
		print(i+1)
-- EXECUTION TIME:
2358.69
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:

-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
OCI runtime exec failed: exec failed: container_linux.go:296: starting container process caused "process_linux.go:86: executing setns process caused \"exit status 21\"": unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 20:55:32) 
-- CODE:
from numpy import*
p= array(eval(input()))
f= array(eval(input()))
i = 0
while(i<12):
	if(max(p))==p[i]:
		print(i+1)
		break
		i=i+1
-- EXECUTION TIME:
2154.8
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:

-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:02:01) 
-- CODE:
from numpy import*

p= array(eval(input()))
f= array(eval(input()))
i = 0
while(i<12):
	if(max(p)==p[i]):
		print(i+1)
	break
		i=i+1
-- ERROR:
File "XXXX", line 10
    i=i+1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:02:15) 
-- CODE:
from numpy import*

p= array(eval(input()))
f= array(eval(input()))
i = 0
while(i<12):
	if(max(p)==p[i]):
		print(i+1)
		break
	i=i+1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:02:37) 
-- CODE:
from numpy import*

p= array(eval(input()))
f= array(eval(input()))
i = 0
while(i<12):
	if(max(p)==p[i]):
		print(i+1)
		break
	i=i+1
-- EXECUTION TIME:
0.541068
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
11
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
